--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: "jekyll-theme-minimal"
 title: "Dr. Patrick Feuerstein"
 description: "My personal Homepage"
 #logo: [Location of the logo]
-show_downloads: false
+#show_downloads: false
 #google_analytics: [Your Google Analytics tracking ID]
