--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-theme: "jekyll-theme-minimal"
-title: "Dr. Patrick Feuerstein"
-description: "My personal Homepage"
+theme: jekyll-theme-minimal
+title: Dr. Patrick Feuerstein"
+description: My personal Homepage
 #logo: [Location of the logo]
-show_downloads: "false"
+show_downloads: false
 #google_analytics: [Your Google Analytics tracking ID]
