--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Dr. Patrick Feuerstein"
+title: Dr. Patrick Feuerstein
 description: My personal Homepage
 #logo: [Location of the logo]
 show_downloads: false
