--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ description: My personal Homepage
 #logo: [Location of the logo]
 show_downloads: false
 #google_analytics: [Your Google Analytics tracking ID]
+github.is_user_page: false
